# rst01-check-validation-erros-response

./: .gitignore  Cargo.toml  docker-compose.yml  env.example
migrations/: 20231120164807_users.sql
src/: lib.rs  main.rs
src/users/: handler.rs  model.rs  routes.rs
