[package]
name = "rst01-check-validation-erros-response"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
dotenv = "0.15.0"
env_logger = "0.10.1"
lazy_static = "1.4.0"
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "macros", "mysql"] }
validator = { version = "0.16.1", features = ["derive", "validator_derive"] }
